microservice -added docker compose

--- a/company/src/main/resources/application.properties
+++ b/company/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-spring.application.name=reviews
-server.port=8083
+spring.application.name=company
+server.port=8081
 
 #H2-DB
 # spring.h2.console.enabled=true
-# spring.datasource.url=jdbc:h2:mem:reviews
+# spring.datasource.url=jdbc:h2:mem:company
 # spring.jpa.generate-ddl=true
 # spring.jpa.show-sql=true
 # spring.jpa.hibernate.ddl-auto=update
 
 #POSTGRES parameters
-spring.datasource.url=jdbc:postgresql://localhost:5433/reviews
+spring.datasource.url=jdbc:postgresql://localhost:5433/company
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database=POSTGRESQL
