--- a/job/src/main/resources/application.properties
+++ b/job/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-spring.application.name=reviews
-server.port=8083
+server.port=8082
+spring.application.name=job
+
 
 #H2-DB
 # spring.h2.console.enabled=true
-# spring.datasource.url=jdbc:h2:mem:reviews
+# spring.datasource.url=jdbc:h2:mem:jobs
 # spring.jpa.generate-ddl=true
 # spring.jpa.show-sql=true
 # spring.jpa.hibernate.ddl-auto=update
 
 #POSTGRES parameters
-spring.datasource.url=jdbc:postgresql://localhost:5433/reviews
+spring.datasource.url=jdbc:postgresql://localhost:5433/jobs
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database=POSTGRESQL
