--- a/company/src/main/resources/application.properties
+++ b/company/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-eureka.instance.hostname=localhost
+# eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=false
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
