--- a/reviews/src/main/resources/application.properties
+++ b/reviews/src/main/resources/application.properties
@@ -16,3 +16,10 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+# eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=false
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
