--- a/job/src/main/resources/application.properties
+++ b/job/src/main/resources/application.properties
@@ -24,3 +24,7 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 # eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+# /Zipkin
+management.tracing.sampling.probability=1.0
+
