--- a/reviews/src/main/resources/application.properties
+++ b/reviews/src/main/resources/application.properties
@@ -23,3 +23,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=false
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+# /Zipkin
+management.tracing.sampling.probability=1.0
