-added application properties file for configServer

--- a/config-Server/src/main/resources/application.properties
+++ b/config-Server/src/main/resources/application.properties
@@ -9,3 +9,5 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 # /Zipkin
 # management.tracing.sampling.probability=1.0
+
+spring.cloud.config.server.git.uri=https://github.com/malise5/microservice-jobApplication/
