-added application properties file for configServer

--- a/job/src/main/resources/application.properties
+++ b/job/src/main/resources/application.properties
@@ -28,3 +28,5 @@ eureka.client.fetch-registry=true
 # /Zipkin
 management.tracing.sampling.probability=1.0
 
+# config server
+spring.config.import=configserver:http://localhost:8080
